# pam-core

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  MODULES.md  PROJECT_PROFILES.md  PROJECT_STATE.md  QUALITY_GATES.md  README.md  SKILL_DEPENDENCIES.md  SKILL_GUIDELINES.md  VERSIONING.md  pyproject.toml  run.py
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
config/: runtime.json
docs/: AGENT_COMPATIBILITY.md  INSTALL_CLAUDE.md  INSTALL_CODEX.md  INSTALL_GENERIC.md  INSTALL_LINUX.md  INSTALL_MACOS.md  KNOWN_LIMITATIONS.md  LINUX_TEST_PLAN.md  MULTI_AGENT_COMPATIBILITY.md  PACKAGING.md  PAM_PROTOCOL.md  RELEASE_READINESS.md  USAGE.md  audit-report.md
docs/runtime-tests/: CLAUDE_CODE.md  CODEX_APP.md  CODEX_CLI.md  EVIDENCE_TEMPLATE.md  GENERIC_AGENT.md  README.md  RUNTIME_RESULTS.md  SMOKE_TEST_PROMPTS.md
memory/: store.json
pam_core/: __init__.py  version.py
pam_core/adapters/: __init__.py  base_adapter.py  claude_adapter.py  cli_adapter.py  codex_adapter.py  cursor_adapter.py
pam_core/api/: __init__.py  routes.py  server.py
pam_core/cli/: __init__.py  main.py
pam_core/config/: __init__.py  settings.py
pam_core/engine/: __init__.py  core.py  decision.py  executor.py  intelligence.py  loop.py  scheduler.py  state.py
pam_core/memory/: __init__.py
pam_core/protocol/: __init__.py  parser.py
pam_core/registry/: __init__.py  skills.py
pam_core/resolver/: __init__.py  engine.py
pam_core/runtime/: __init__.py  adapters.py  bridge.py  detection.py  loop.py
pam_core/server/: __init__.py  __main__.py  app.py  prompt_optimizer.py  router.py  routes.py  schemas.py  security_static.py  skill_loader.py
pam_core/skills/: __init__.py
scripts/: detect-agent.sh  install-unix.sh  install-windows.ps1  package-release.ps1  package-release.sh  runtime-smoke-test.sh  uninstall-unix.sh  uninstall-windows.ps1  validate-claude.ps1  validate-package.ps1  validate-package.sh  validate-unix.sh  validate.ps1
skills/accessibility-review/: SKILL.md
tests/: test_server_api.py
(+92 files in other folders)
