[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pam-core"
version = "1.0.0"
description = "AI Agent Runtime Engine based on skill orchestration"
readme = "README.md"
license = {text = "MIT"}
authors = [{name="Pam"}]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Application Frameworks"
]

dependencies = [
  "fastapi",
  "uvicorn"
]

[project.scripts]
pam = "pam_core.cli.main:main"

[tool.setuptools.packages.find]
include = ["pam_core*"]
